fix: Allow z-index override for Tooltip (#747)

--- a/src/new-components/modal/modal.module.css
+++ b/src/new-components/modal/modal.module.css
@@ -27,7 +27,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: var(--reactist-stacking-order-modal, 1);
+    z-index: var(--reactist-stacking-order-modal);
 }
 
 .overlay > [data-focus-lock-disabled] {
