--- a/src/new-components/tooltip/tooltip.module.css
+++ b/src/new-components/tooltip/tooltip.module.css
@@ -1,4 +1,4 @@
 .tooltip {
     text-overflow: ellipsis;
-    z-index: 1000;
+    z-index: var(--reactist-stacking-order-tooltip);
 }
